docs: 📃 添加国际化的介绍

--- a/docs/docs/guide/advanced/services.mdx
+++ b/docs/docs/guide/advanced/services.mdx
@@ -105,13 +105,13 @@ export default new UserService();
 
 在 VSCode 中，是这般：
 
-![接口实现跳转](./接口实现跳转.gif)
+![接口实现跳转](./static/接口实现跳转.gif)
 
 另外，在调用 `UserService` 接口的地方，也能享受到 `interface` 带来的注释、类型定义。
 
 如图：
 
-![调用处](./调用处.jpeg)
+![调用处](./static/调用处.jpeg)
 
 ### type 类型层
 
