--- a/docs/docs/guide/introduction.mdx
+++ b/docs/docs/guide/introduction.mdx
@@ -36,7 +36,7 @@ sidebar_position: 1
 
 #### 环境
 
-- [`Node.js`](http://nodejs.cn/) >= `14.12.0` 版本
+- [`Node.js`](http://nodejs.cn/) >= `14.12.0` 版本
 - [`yarn`](https://yarnpkg.com/) ~= `1.22.15` 版本
 
 #### 基础知识
